--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color: #f0f0f0;
     color: #333;
     font-family: Arial, sans-serif;
-    background-image: url('backpixel.jpeg');
+    background-image: url('/backpixel.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
